--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,107 @@
-.App {
-  text-align: center;
+:root {
+  --nav-wide-width: 235px;
+  --sidebar-right-width: 235px;
+  --main-section-width: calc(
+    100% - var(--nav-wide-width) - var(--sidebar-right-width)
+  );
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body,
+html {
+  font-family: "Roboto", sans-serif;
+  padding: 0;
+  margin: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.text {
+  font-size: 14px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.text-bold {
+  font-size: 14px;
+  font-weight: bold;
+}
+.muted-text {
+  color: #666;
+}
+.container {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  padding: 0px 20px;
+}
+
+
+.main-content {
+  width: var(--main-section-width);
+  padding: 0px 20px;
+}
+.side-bar {
+    height: 100vh;
+    width: var(--nav-wide-width);
+    border-right: 1px solid #e4e4e4;
+    padding: 24px 0px;
+  }
+.side-bar .logo {
+  padding: 24px 12px;
+}
+.nav-item:hover {
+  background: #e4e4e4;
+  border-radius: 5px;
+}
+.nav-item {
+  margin: 14px 14px;
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 10px 10px;
+  font-size: 24px;
+  padding: 12px 12px;
 }
 
-.App-link {
-  color: #61dafb;
+.nav-item .icon {
+  font-size: 28px !important;
+}
+.nav-text {
+  font-size: 18px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.right-side-bar {
+  height: 100vh;
+  width: var(--sidebar-right-width);
+  border-left: 1px solid #e4e4e4;
+  padding: 24px 12px;
+}
+.profile {
+  display: flex;
+  align-items: center;
+  margin: 14px 0;
+}
+.profile img {
+  border-radius: 50%;
+  max-width: 42px;
+  max-height: 42px;
+}
+.profile .title {
+  margin: 0px 10px;
+}
+.profile .title p {
+  margin: 0;
+  padding: 0;
+}
+
+
+.card .header{
+  display: flex;
+  align-items: center;
+}
+
+.card .header .profile {
+  margin-right: auto;
+}
+
+.post img{
+  max-width: 100%;
+  border-radius: 4px;
+}
+
+.footer span{
+  margin: 8px;
 }
